--- a/css/style.css
+++ b/css/style.css
@@ -1,108 +1,63 @@
 
 
 header{
-padding: 1em;
-
+  padding: 1em;
 }
 
 h1{
   font-size:35px;
 }
 
-
-
 body {
     font-family: 'Raleway';
     font-size: 16px;
-    margin: 0;
-    
+    margin: 0;    
 }
 
-
 .logo{
-
-  position:absolute; 
-  left:10px;
+  margin-right:auto;
 }
 
 .nav{
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  
-  
- 
 }
 
-.nav ul
-{
-	
-	
+.nav ul{
 	list-style: none;
-
 }
 
-.nav a
-{   
+.nav a{   
 	padding: 10px;
-	
-	
 	text-decoration: none;
 	color: #444D56;
-  
-  
 }
-
-
-
-
 
 .inscription p{
-  
-	color: blue;
-
-
+	color: #0065fc;
 }
-
-
-
-
-
 
 a:hover{
-
- color: blue;
- 
- border-top: 3px blue solid;
+ color: #0065fc;
+ transition-duration: 0.3s;
+ border-top: 3px #0065fc solid;
 }
 
-.menu
-{
+.menu{
 	display: flex;
-	
-  
-  
-
 }
-
-
-
-
 
 .inner_titre{
   display: inline-block;
-
 }
 
 .inner_text{
- 
   border: solid 1px;
   border-radius: 999px;
   display: inline-block;
   padding-right: 1em;
   box-shadow: 0.1em 0.1em 0.1em  grey;
-  
-
 }
 
 .inner_text:hover{
@@ -112,56 +67,36 @@ a:hover{
 }
 
 .inner .inner_text .fas {
-  
   padding: 15px;
   border-radius: 50%;
- 
-  
   background-color: rgba(0, 101, 252, 0.3);
   color: rgba(0, 101, 252 )
-
 }
     
-
 .search .location .fa-map-marker-alt{
-
-  
-  
-     padding: 25px;
-    background-color: #e5e5e5;
-   
-    
-    
-    color:black;
-  
-  
+  padding: 25px;
+  background-color: #e5e5e5;
+  color:black;
 }
 
 .search{
   border: 1px solid #c4c4c4;
-  
+  box-shadow: 0.1em 0.1em 0.1em  grey;
   overflow: hidden;
   display: inline-flex;
   margin-top: 10px;
   margin-bottom: 10px;
-
   border-radius: 1em;
-  
-  
- 
 }
 .search input{
   border: none;
   font-size: 18px;
- 
 }
 
 .button-web button{
   padding: 22px;
-  
   border: none;
   object-fit: contain;
-  
   background-color: rgba(0, 101, 252 );
   color: #ffffff;
   font-size: 18px;
@@ -176,580 +111,537 @@ a:hover{
   align-items: center;
 }
 
+.list {
+  align-content: flex-start;
+  padding: 0.5em;
+}
 
+.list ul{
+  padding-left: 0;
+}
  
-  .list {
-  
-   
-    align-content: flex-start;
-     
-      padding: 0.5em;
-  }
-  .list ul{
-   
-    padding-left: 0;
-
-  }
- .list li{
-  
+.list li{
   margin:5% 0;
   list-style: none;
- }
+}
 
- footer{
+footer{
   background-color: #F2F2F2;
+}
 
- }
+.footer-row{
+  display: flex;
+  justify-content: space-around;
+}
+  
+#hebergement{
+  background-color: #F2F2F2;
+  padding: .5em;
+  width: 65%;
+  border-radius: 5%;
+  margin: 10px;
+}
 
-  .footer-row{
-    display: flex;
-    justify-content: space-around;
+.mosaique p{
+  font-weight: bold;
+  font-size: 22px;
+}
   
+.populaire {
+  background-color: #F2F2F2;
+  padding: .5em;
+  width: 33%;
+  border-radius: 5%;
+  margin: 10px;
+}
+  
+.activités {
+  padding: .5em;
+}
+  
+.corps{
+  display: flex;  
+}
 
-  }
-  
-  #hebergement{
-      background-color: #F2F2F2;
-      
-    
-      padding: .5em;
-      width: 65%;
-      
-      border-radius: 5%;
-      margin: 10px;
-  }
-  
-  .populaire {
-      background-color: #F2F2F2;
-      
-      padding: .5em;
-     
-      width: 33%;
-      
-      border-radius: 5%;
-      margin: 10px;
-  }
-  
-  .activités {
+.listings_item{
+  border-radius: 10% 10% 0% 0%;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 200px;
+}
 
-      padding: .5em;
-      margin: 10px;
-  }
-  
-  .corps{
-    display: flex;  
-    
-    
-   
-  }
-
-  
-  .listings_item{
-    border-radius: 10% 10% 0% 0%;
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: 200px;
+.listings_item_pop{
+  position:relative;
+  overflow: hidden;
+  width: 100%;
+  max-height:200px;
+  border-radius: 10% 0% 0% 10%; 
   }
 
-  .listings_item_pop{
-    
-    position:relative;
-    overflow: hidden;
-    width: 100%;
-    max-height:200px;
-    border-radius: 10% 0% 0% 10%;
-    
-  }
-  .listings_image{
-      object-fit: cover;
-      height: 100%;
-      width: 100%;
-      
-      position: absolute;
-      
-      
-  }
-  .listings_image_pop{
-    
-   
-      position: absolute;
-      object-fit: cover;
-      height: 100%;
-      width: 100%;
-      max-width: 270px;
-  }
-
-  .listings_image_heb{
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-    max-width: 100%;
-    position: absolute;
-  }
+.listings_image{
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
   
-  .greyText{
-     font-size: 22px;
-     line-height:18px;
-  }
-  
- 
-  .listings_content{
-    display:flex;
-    
-    flex-direction: column;
-    padding: 0.5em;
-    border-radius: 10%;
-  }
+.listings_image_pop{
+  position: absolute;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
 
-  .listings_content_pop{
-    display:flex;
-    justify-content: space-around;
-    width: 100%;
-    height: auto;
-    flex-direction: column;
-    padding: 0.5em;
-    border-radius: 10%;
-  }
+.listings_image_heb{
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
+  position: absolute;
+}
+  
+.greyText{
+  font-size: 22px;
+  line-height:18px;
+}
+
+.listings_content{
+  display:flex;
+  flex-direction: column;
+  padding: 0.5em;
+  border-radius: 10%;
+}
+
+.listings_content_pop{
+  display:flex;
+  justify-content: space-around;
+  width: 100%;
+  height: auto;
+  flex-direction: column;
+  padding: 0.5em;
+  border-radius: 10%;
+}
   
   .mosaique{
-  
-    display:grid;
-    grid-template-columns: repeat(3, 1fr) ;
-    
-     
-  }
+  display:grid;
+  grid-template-columns: repeat(3, 1fr);
+}
   
 .mosaique2{
-
   display: grid;
 }
 
-  .mosaique3{
-
-    display:grid;
-    grid-template-columns: repeat(4, 1fr);
-
-
-  }
+.mosaique3{
+  display:grid;
+  grid-template-columns: repeat(4, 1fr);
+}
   
-  
-  
-  
-  
- .tendance{
+.tendance{
   display: flex;
   align-items: center;
   justify-content: space-between;
- }
+}
 
+.main_content_pop {
+  width: 100%;
+  border-radius: 10%;
+  display: flex;
+  background-color: white;
+  margin: 1em auto 1em;
+  box-shadow: 10px 5px 5px grey;
+}
 
-  
+.main_content_hebergement{
+  border-radius: 10%;
+  background-color: white;
+  margin: 10px ;
+  box-shadow: 10px 5px 5px grey;
+}
 
-  .main_content_pop {
-   
-    width: 100%;
-    border-radius: 10%;
-    display: flex;
-    background-color: white;
-    margin: 1em auto 1em;
-    box-shadow: 10px 5px 5px grey;
-  }
+.main_content_hebergement1{
+  border-radius: 10%;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  margin: 5px;
+  box-shadow: 10px 5px 5px grey;
+  grid-column-start: 1; 
+  grid-column-end: 1; 
+  grid-row-start: 1; 
+  grid-row-end: 3; 
+}
 
-  .main_content_hebergement{
-    
-    
-    border-radius: 10%;
-    
-   
-    background-color: white;
-    margin: 10px ;
-    box-shadow: 10px 5px 5px grey;
-  }
+.listings_item1{
+  overflow: hidden;
+  display: flex;
+  width: 100%;
+  height:90%;
+  font-size:22px;
+  border-radius: 10% 10% 0% 0%;
+  position:relative;
+}
 
-  .main_content_hebergement1{
-    
-   
-    border-radius: 10%;
-    
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    margin: 5px;
-    box-shadow: 10px 5px 5px grey;
+.main_content_hebergement2{
+  border-radius: 10%;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  margin: 5px;
+  box-shadow: 10px 5px 5px;
+  grid-column-start: 3; 
+  grid-column-end: 3; 
+  grid-row-start: 1; 
+  grid-row-end: 3; 
+}
 
-    grid-column-start: 1; 
-   grid-column-end: 1; 
-   grid-row-start: 1; 
-   grid-row-end: 3; 
-  }
-  .listings_item1{
-    
-    overflow: hidden;
-    display: flex;
-    width: 100%;
-    height:90%;
-    font-size:22px;
-    border-radius: 10% 10% 0% 0%;
-    position:relative;
-  }
-
-  .main_content_hebergement2{
-    
-   
-    border-radius: 10%;
-    
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    margin: 5px;
-    box-shadow: 10px 5px 5px;
-
-    grid-column-start: 3; 
-   grid-column-end: 3; 
-   grid-row-start: 1; 
-   grid-row-end: 3; 
-  }
-
-  .listings_item2{
-    
-    overflow: hidden;
-    display: flex;
-    width: 100%;
-    height:100%;
-    position: relative;
-    font-size:22px;
-    border-radius: 10% 10% 0% 0%;
-
-  }
-
-
-
-
+.listings_item2{
+  overflow: hidden;
+  display: flex;
+  width: 100%;
+  height:100%;
+  position: relative;
+  font-size:22px;
+  border-radius: 10% 10% 0% 0%;
+}
 
   /* responsive*/
 
-   @media screen and (max-width: 800px)   {
-    .body{
-      padding: 0;
-      margin: 0;
-      border:0;
+@media screen and (max-width: 800px)   {
 
+.body{
+  padding: 0;
+  margin: 0;
+  border:0;
+}
 
-    }
-    .header{
-      width: auto;
-      display: flex;
-      flex-flow : row wrap;
+header{
+  margin:0;
+  padding: 0;
+}
 
+.nav{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr)
+}
 
-    }
+.nav a{   
+  padding: 0%;
+  text-decoration: none;
+  color: #444D56;
+  padding-bottom: 0.5em;
+  font-weight: bold;
+}
 
-    .nav{
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
+.menu{
+  width: 100%;
+  justify-content: space-around;
+  grid-column: 1/3;
+  grid-row: 2;
+  margin:0;
+  padding: 0%;
+}
 
-    }
+a:hover{
+  color:#0065fc;
+  border-top: none;
+}
 
-    .menu{
-        grid-column: 1/3;
-        grid-row: 2;
-        display: flex;
-        justify-content: space-around;
-     }
+.hebli:hover{
+  color:#0065fc;
+  transition-duration: 0.2s;
+  border-bottom: 2px #0065fc solid;
+  border-top: none;
+  margin-bottom: 0;
+  color:#0065fc;
+}
 
-     .inscription{
-      grid-column-start:2;
-      grid-column-end:3;
-      grid-row-start:1;
-      grid-row-end:1;
-      display: flex;
-      justify-content: flex-end;
-      font-weight: bold;
+.actli:hover{
+  color: #0065fc;
+  transition-duration: 0.2s;
+  border-bottom: 2px #0065fc solid;
+  border-top: none;
+  margin-bottom: 0;
+}
 
-    }
+.hebli{
+  width: 50%;
+  border-bottom: solid;
+  border-bottom-color: rgb(226, 219, 219);
+  padding-bottom: 0.5em;
+  justify-content: center;
+  display: flex;
+}
 
-    .logo{
-     position: relative;
-     left: 0;
+.actli{
+  width: 50%;
+  border-bottom: solid;
+  border-bottom-color: rgb(226, 219, 219);
+  padding-bottom: 0.5em;
+  justify-content: center;
+  display: flex;
+}
 
-    }
+.menu {
+  padding: 0%;
+}
 
+.actli{
+  width: 50%;
+}
+.inscription{
+  grid-column-start:2;
+  grid-column-end:3;
+  grid-row-start:1;
+  grid-row-end:1;
+  display: flex;
+  justify-content: flex-end;
+  font-weight: bold;
+  padding-right: 1em;
+}
 
-    
-    .search{
-    width: 100%;
-    
-    
-    justify-content: space-between;
+.logo{
+  padding-left: 1em;
+}
 
-    }
-
-    .button_mobile{
-      padding: 20px;
-      display: inline;
-      background-color: rgba(0, 101, 252 );
-      
+.slogan{
+  padding-right:0.5em;
+  padding-left:0.5em;
+}
+.search{
+  width: 100%;
+  box-shadow: 0.1em 0.1em 0.1em  grey;
+  justify-content: space-between;
   
-    }
+}
 
-  .button_mobile .fas{
-    
-    color:white;
-    
-    
-  }
 
+.button_mobile{
+  padding:20px;
+  display:inline;
+  background-color: rgba(0, 101, 252 );
+}
+
+.button_mobile .fas{
+  color:white;
+}
+
+.button-web button {
+  display: none;
+}
+
+.inner{
+  display: flex;
+  flex-flow : column wrap;
+}
+    
+.inner_text{
+  border:solid 1px;
+  margin: 5px;
+  border-radius: 999px;
+  max-width: max-content;
+}
+
+.inner_titre{
+  padding-right:0.5em;
+  padding-left:0.5em;
+}
+
+.info{
+  padding-right:0.5em;
+  padding-left:0.5em;
+}
+    
+.mosaique {
+  display: flex;
+  flex-flow : row wrap;
+  width: auto;
+}
+
+.mosaique2 {
+  display: flex;
+  flex-flow : row wrap;
+}
+    
+.corps {
+  width: auto;
+  display: flex;
+  flex-direction: column-reverse;
+}
+    
+#hebergement{
+  border-radius:0;
+  width: auto;
+  margin: 0%;
+  background-color:white;
+}
+
+#activites{
+  display: flex;
+  flex-flow : row wrap;
+}
+
+.mosaique3{
+  display: flex;
+  flex-flow : row wrap;
+}
+
+.tendance {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.populaire{
+  width:auto;
+  margin: 0;
+  border-radius: 0%;
+  padding: 1em;
+}
+
+.listings_image{
+  border-radius: 1em 1em 0% 0%;
+}
+    
+.listings_image_heb{
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
+  position: absolute;
+  border-radius: 1em 1em 0% 0%;
+}
+    
+.listings_item1{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 200px;
+  border-radius: 1em 1em 0% 0%;
+}
+
+.listings_item2{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 200px;
+  border-radius: 1em 1em 0% 0%;
+}
+
+.main_content_hebergement{
+  border-radius: 1em;
+  background-color: white;
+  box-shadow: 10px 5px 5px grey;
+  width: 100%;
+}
+
+.main_content_hebergement1{
+  border-radius: 1em;
+  background-color: white;
+  box-shadow: 10px 5px 5px grey;
+  width: 100%;
+}
+
+.main_content_hebergement2{
+  border-radius: 1em;
+  background-color: white;
+  box-shadow: 10px 5px 5px grey;
+  width: 100%;
+}
   
+.main_content_pop {
+  border-radius: 1em;
+  display: flex;
+  background-color: white;
+  width: 100%;
+  box-shadow: 10px
+  5px 5px grey;
+}
 
-  .button-web button {
-    
-    display: none;
-    
-  }
+.listings_content_pop{
+  display:flex;
+  justify-content: space-around;
+  width: 100%;
+  flex-direction: column;
+  padding: 0.5em;
+}
 
+.listings_item_pop{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height:200px;
+  border-radius: 1em 0% 0% 1em;
+}
 
-    
+.listings_image_pop{
+  border-radius: 1em 0% 0% 1em;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
+  position: absolute;
+}
 
-    
+.main_content {
+  border-radius: 1em;
+  display: flex;
+  background-color: white;
+  width: 100%;
+  box-shadow: 10px
+  5px 5px grey;
+}
 
-    .inner{
+.listings_content{
+  display:flex;
+  justify-content: space-around;
+  width: 100%;
+  height: auto;
+  flex-direction: column;
+  padding: 0.5em;
+  border-radius: 1em 1em 0% 0%;
+}
 
-      display: flex;
-      flex-flow : column wrap;
-      
-      
-      
-    }
-    
-    .inner_text{
-      border:solid 1px;
-      margin: 5px;
-      border-radius: 999px;
-      max-width: max-content;
-    }
-    
-    .mosaique {
-      display: flex;
-      flex-flow : row wrap;
-      width: auto;
-    }
-    .mosaique2 {
-      display: flex;
-      flex-flow : row wrap;
-      
-    }
-    .corps {
-      width: auto;
-      display: flex;
-      flex-direction: column-reverse;
-    }
-    #hebergement{
-      border-radius: 1em;
-      width: auto;
-      
+.listings_item{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height:200px;
+  border-radius: 1em 1em 0% 0%;
+}
 
-    }
+.listings_image{
+  border-radius: 1em 1em 0% 0%;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
+}
 
-    #activites{
-      display: flex;
-    flex-flow : row wrap;
-    }
-    .mosaique3{
-      display: flex;
-      flex-flow : row wrap;
+.lists{
+  background-color: #F2F2F2;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5em;
+}
 
-    }
+.footer-row{
+  flex-flow: column wrap;
+}
 
-    .tendance {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      width: 100%;
-  }
-
-    .populaire{
-      display: flex;
-    flex-flow : row wrap;
-    width:auto;
-    border-radius: 1em;
-
-
-    }
-
-    .listings_image{
-    
-      border-radius: 1em 1em 0% 0%;
-      
-      
-      
-      
-      
-    }
-    .listings_image_heb{
-      object-fit: cover;
-      height: 100%;
-      width: 100%;
-      max-width: 100%;
-      position: absolute;
-      border-radius: 1em 1em 0% 0%;
-    }
-    
-
-    .listings_item1{
-    
-      position: relative;
-      overflow: hidden;
-      width: 100%;
-      height: 200px;
-      border-radius: 1em 1em 0% 0%;
-    }
-
-    .listings_item2{
-    
-      position: relative;
-      overflow: hidden;
-      width: 100%;
-      height: 200px;
-      border-radius: 1em 1em 0% 0%;
-  
-    }
-
-    .main_content_hebergement{
-    
-      
-    border-radius: 1em;
-    background-color: white;
-    box-shadow: 10px 5px 5px grey;
-    width: 100%;
-
-    }
-
-    .main_content_hebergement1{
-    
-    
-      border-radius: 1em;
-    background-color: white;
-    box-shadow: 10px 5px 5px grey;
-    width: 100%;
-    }
-
-    .main_content_hebergement2{
-    
-    
-      border-radius: 1em;
-    background-color: white;
-    box-shadow: 10px 5px 5px grey;
-    width: 100%;
-    }
-  
-    .main_content_pop {
-   
-    
-      border-radius: 1em;
-      display: flex;
-      background-color: white;
-      width: 100%;
-      box-shadow: 10px
-      5px 5px grey;
-    }
-
-    .listings_content_pop{
-      display:flex;
-      justify-content: space-around;
-      width: 100%;
-      flex-direction: column;
-      padding: 0.5em;
-    
-    }
-
-    .listings_item_pop{
-    
-      position: relative;
-      overflow: hidden;
-      width: 100%;
-      height:200px;
-      border-radius: 1em 0% 0% 1em;
-    }
-
-    .listings_image_pop{
-    
-      border-radius: 1em 0% 0% 1em;
-        
-        
-        object-fit: cover;
-        height: 100%;
-        width: 100%;
-        max-width: 100%;
-        position: absolute;
-        
-    }
-
-
-    .main_content {
-   
-    
-      border-radius: 1em;
-      display: flex;
-      background-color: white;
-      width: 100%;
-      box-shadow: 10px
-      5px 5px grey;
-    }
-
-    .listings_content{
-      display:flex;
-      justify-content: space-around;
-      width: 100%;
-      height: auto;
-      flex-direction: column;
-      padding: 0.5em;
-      border-radius: 1em 1em 0% 0%;
-    }
-
-    .listings_item{
-    
-      position: relative;
-      overflow: hidden;
-      width: 100%;
-      height:200px;
-      border-radius: 1em 1em 0% 0%;
-    }
-
-    .listings_image{
-    
-      border-radius: 1em 1em 0% 0%;
-        
-        
-        object-fit: cover;
-        height: 100%;
-        width: 100%;
-        max-width: 100%;
-        
-        
-    }
-
-    .lists{
-      background-color: #F2F2F2;
-      display: flex;
-      flex-direction: column;
-  
-       
-       padding: 0.5em;
-        
-     }
-
-     .footer-row{
-      flex-flow: column wrap;
-      
-    
-  
-    }
-
-    .list{
-      margin-left: 1em;
-
-    }
+.list{
+  margin-left: 1em;
+}
      
-	}
+input::placeholder {
+  color:black;
+  font-weight: bold;
+}
+
+.text{
+  box-sizing: border-box;
+  width: 60%;
+}
+}
 
